# ofinanceiro

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  railway-setup.sh
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0863eb1635fe_money_columns_to_biginteger.py  53751257f1ae_add_budgets_goals_families_debts_.py  58cbe0aab963_remaining_money_columns_to_biginteger.py  a1c4e2f9b8d3_repair_debt_balance_invariants.py  b2f8c3d4e5a6_referral_feedback_broadcast.py  e996d56b33b3_add_family_member_permissions_columns.py  ec35861df511_create_core_tables_users_accounts_.py
apps/api/app/: config.py  context.py  database.py  dependencies.py  main.py  permissions.py
apps/api/app/ai/: cache.py  compact.py  cost_tracker.py  metering.py  orchestrator.py
apps/api/app/gateways/: __init__.py  angola_stub.py  base.py  e_kwanza_gateway.py  multicaixa_gateway.py  paypay_gateway.py  referencia_bancaria_gateway.py  stripe_gateway.py  unitel_money_gateway.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: __init__.py  account.py  asset.py  base.py  bill.py  broadcast.py  budget.py  category.py  company_settings.py  (+29 more)
apps/api/scripts/: seed.py  seed_demo.py  seed_production.py  seed_video_data.py
apps/api/tests/: conftest.py  test_agents.py  test_auth.py  test_budgets.py  test_categorize.py  test_crud.py  test_families.py  test_goals.py  test_health.py  test_llm.py  test_metering.py  test_models.py  test_new_models.py  test_reports.py
(+483 files in other folders)
